to be tested
to create tables on DB and test the service